Fixed spacing in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,6 +67,10 @@ p {
   font-size: 24px;
 }
 
+.check-out {
+  font-size: 20px;
+}
+
 .content-container {
   padding: 60px 20px;
 }
